# happyview

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.e2e.ci.yml  docker-compose.e2e.yml  docker-compose.yml  entrypoint.sh
.cargo/: audit.toml
.github/workflows/: ci.yml
migrations/postgres/: 20260501000000_scripts_by_trigger.sql  20260512000000_fix_null_dead_letter_ids.sql  20260513000000_add_backfill_stage.sql  20260513000001_create_backfill_repos.sql  20260526000001_drop_access_token_hash.sql  20260527000000_script_description_limit.sql  20260527000001_scripts_timestamptz_to_text.sql  20260604000000_create_service_identity.sql  20260604000001_create_service_entries.sql  20260626000000_prefix_table_names.sql  20260627000000_proposal_0016_alignment.sql  20260627000001_verification_methods.sql  20260701000000_create_jobs.sql  20260702000000_add_inherit_auth_to_jobs.sql  20260707000000_add_revoked_at_to_space_credentials.sql
migrations/sqlite/: 20260512000000_fix_null_dead_letter_ids.sql  20260520000000_add_resolved_repos.sql  20260521000000_backfill_diagnostics.sql  20260522000000_add_records_collection_indexed_at_index.sql  20260526000000_dpop_session_per_device.sql  20260527000000_script_description_limit.sql  20260604000000_create_service_identity.sql  20260604000001_create_service_entries.sql  (+6 more)
scripts/: dev-Caddyfile  e2e-Caddyfile  e2e-config.toml  e2e-entrypoint.sh  entrypoint.sh  init-e2e-dbs.sql  tunnel.sh
src/: cid_verify.rs  config.rs  constant_time.rs  db.rs  dns.rs  domain.rs  error.rs  event_log.rs  http_retry.rs  jetstream.rs  labeler.rs  lexicon.rs  lib.rs  lua_analysis.rs  main.rs  plc.rs  profile.rs  proxy_config.rs  rate_limit.rs  record_handler.rs  record_refs.rs  resolve.rs  server.rs  service_entries.rs  service_identity.rs  setup.rs  verification_methods.rs
src/admin/: auth.rs  (+24 more)
tests/: cors.rs  dev_happyview.rs  dpop_auth.rs  e2e_admin.rs  e2e_admin_service_entries.rs  e2e_admin_service_identity.rs  e2e_api_clients.rs  e2e_delegation.rs  e2e_domains.rs  e2e_feature_flags.rs  e2e_jobs.rs  e2e_labelers.rs  e2e_network_lexicons.rs  e2e_proxy_config.rs  e2e_scripts.rs  e2e_service_identity.rs  e2e_setup.rs  e2e_xrpc.rs  lua_atproto_api.rs  lua_db_api.rs  lua_record_api.rs  migration_upgrade.rs  misconfigured.rs  plugin_logging.rs  spaces_credential_mint.rs  spaces_credential_revocation.rs  spaces_db.rs  spaces_list_repos_auth.rs  spaces_notify_auth.rs  transfer_super.rs
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts
(+135 files in other folders)
